# easy-ableton-mcp

./: .gitignore  .mcp.json.example  ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW.md  INSTALLATION.md  PRD.md  README.md  REFACTOR_PLAN.md  RESEARCH.md  UPGRADES.md  easy-ableton-mcp.sh  install.py  progress.txt  pyproject.toml
AbletonMCP_Remote_Script/: __init__.py
MCP_Server/: __init__.py  ableton_process.py  installer.py  platform.py  preferences.py  protocol.py  server.py
scripts/: dev-refresh.sh  test_mcp_tools.py
tests/: conftest.py  test_command_dispatch.py  test_required_params.py
