[project]
name = "easy-ableton-mcp"
version = "1.0.0"
description = "Ableton Live integration through the Model Context Protocol with ElevenLabs and extended features"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Andrew Stern", email = "andrew.martin.stern@gmail.com"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "elevenlabs>=0.2.26",
    "python-dotenv>=1.0.0",
]

[project.scripts]
easy-ableton-mcp = "MCP_Server.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["MCP_Server", "elevenlabs_mcp", "AbletonMCP_Remote_Script"]

[tool.setuptools.package-data]
AbletonMCP_Remote_Script = ["*.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.urls]
"Homepage" = "https://github.com/androidStern/easy-ableton-mcp"
"Bug Tracker" = "https://github.com/androidStern/easy-ableton-mcp/issues"

[project.optional-dependencies]
xy_controller = [
    "pynput>=1.7.6",
    "screeninfo>=0.8.1",
]
